--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,96 +1,61 @@
 body {
 	font-size: 1.2em;
-	font-family: Arial, sans-serif;
 	line-height: 1.3em;
 	padding: 0px;
 	margin: 0px;
 	background: #fefefe;
 	color: #333;
 }
-#content {
-	position: absolute;
-	overflow: hidden;
-	bottom: 30px;
-	left: 0px;
-	right: 0px;
-	top: 50px;
+main.tour {
+  margin-top: 60px;
 }
-
-.column {
-	width: 50%;
-	position: relative;
-	float: left;
-	overflow: auto;
-}
-
-.column.readme {
-	height: 100%;
-}
-
-.column.exercise {
-	height: 500px;
-}
-
-.column .content {
-	margin: 10px;
-	overflow: auto;
-}
-
-.play {
-	position: relative;
-	top: 0px;
-	bottom: 600px;
+main.tour .feature {
+  padding-top: 0.5em;
 }
 .exampleHeading {
-	display: none;
+  display: none;
 }
-#content .CodeMirror {
-	height: 100%;
+main a, main a:link, main a:active, main a:visited {
+  color: #1f8ace;
 }
-
-#header {
-	color: #fff;
-	background: #333;
-	height: 50px;
-	line-height: 50px;
-	padding-left: 10px;
+main .buttons a,
+main .buttons a:link,
+main .buttons a:visited,
+main .buttons a:active {
+  color: #505055;
 }
-#controls {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	height: 50px;
-}
-#controls {
-	padding: 0px;
-	margin: 0px;
-	line-height: 40px;
-	list-style: none;
-}
-#controls li {
-	padding: 0px;
-	margin: 0px;
-	float: left;
-	padding: 5px;
-}
-#controls li a {
-	display: block;
-	border: 1px solid red;
-	padding-left: 10px;
-	padding-right: 10px;
+main a.run, main a.run:link, main a.run:active, main a.run:visited {
+  color: #e74039;
 }
 
-
-#footer {
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
-	height: 30px;
-	line-height: 30px;
-	text-align: center;
+ul.tour-nav {
+  float: right;
+  margin-top: 1.5em;
 }
 
-.heart {
-	color: #f00;
+@media screen and (min-width: 980px) {
+  ul.tour-nav {
+  float: right;
+    margin-top: 2em;
+  }
+}
+
+ul.tour-nav li {
+  width: 1em;
+  line-height: 1.5em;
+  font-size: 1.5em;
+  float: left;
+  text-align: center;
+}
+ul.tour-nav li a {
+  display: block;
+}
+ul.tour-nav li.pager {
+  width: 60px;
+}
+.feature {
+  z-index: 1;
+}
+.feature .code-snippet .CodeMirror {
+  height: 100%;
 }
